			       =================
				BOGOFILTER NEWS
			       =================

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

	The sections

        INCOMPATIBLE CHANGES IN BOGOFILTER (version)
and     MAJOR CHANGES IN BOGOFILTER (version)

	are particularly important.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

0.94.6	2005-04-26

	2005-04-24

	* Fixed bogoutil help and documentation to show that -d, -l,
	  -w, -p, and -H options expect a filename, not a directory.
	* Refactored bfpath creation to clean up open modes and lessen
	  number of external calls into paths.c
	* Added db-3.2.9 compatibility macro for db->stat().
	* Updated bogominitrain.pl to v1.6

0.94.5	2005-04-23

	* Fixed database open bug in bogoutil.

	2005-04-20

	* bf_compact now removes the $BOGOHOME.old directory before renaming
	  the backup to this name, to avoid nested backup directories.

	* Let bf_compact maintain current state of transactions vs.
	  non-transactions. (Bug report: Bill McClain)

	2005-04-10

	* Use bogoutil --db-print-leafpage-count in bf_resize.

	* Add --db-print-leafpage-count mode to bogoutil.

	* Use bogofilter -QQ in bf_resize and bf_tar.

	* Use bogoutil --db-list-logfiles in bf_copy and bf_tar.

	* Add --db-list-logfiles mode to bogoutil. Can list inactive or all
	  logfiles in relative or absolute paths.

	* Repair bf_copy script that lost log.* files, possibly corrupting
	  database if they had been transactional.  The defect was introduced
	  into bogofilter 0.94.2.

	2005-04-09

	* Suppress valgrind reports of errors in glibc::strchr.

0.94.4	2005-04-07

	* The RELEASE.NOTES file has been reformatted for readability.

	* When using transactions, the db_log_autoremove option is now
	  enabled by default (to match the documentation).

	* Option db_log_autoremove has been added to bogofilter.cf.example

	2005-04-05

	* Fix segfault in VERP processing.

	2005-04-04
