@@ -210,28 +210,34 @@ void dsm_init(bfpath *bfp)
      * forced. */
 #if !defined(ENABLE_TRANSACTIONS) && !defined(DISABLE_TRANSACTIONS)
     /* we neither force nor forbid transactions, so add probe code */
-    e_txn txn;
-
     if (DEBUG_DATABASE(2))
 	fprintf(dbgout, "probing \"%s\" and \"%s\" for environment...\n",
 		bfp->dirname, bfp->filename);
 
-    txn = probe_txn(bfp);
-
-    if (DEBUG_DATABASE(1))
-	fprintf(dbgout, "probing \"%s\" and \"%s\" result %d\n",
-		bfp->dirname, bfp->filename, txn);
-
-    if (txn == T_DISABLED )
-	eTransaction =  T_DISABLED;
-    if (txn == T_ENABLED )
-	eTransaction =  T_ENABLED;
-
-    /* overrides for test suite etc. */
+    /* check for overrides (for test suite, etc.) */
     if (getenv("BF_FORCE_NON_TRANSACTIONAL"))
 	eTransaction = T_DISABLED;
     if (getenv("BF_FORCE_TRANSACTIONAL"))
 	eTransaction = T_ENABLED;
+
+    if (eTransaction != T_DISABLED && eTransaction != T_ENABLED) {
+	/* if not set, probe for database environment */
+	e_txn txn = probe_txn(bfp);
+
+	if (DEBUG_DATABASE(1))
+	    fprintf(dbgout, "probing \"%s\" and \"%s\" result %d\n",
+		    bfp->dirname, bfp->filename, txn);
+	if (txn == T_DISABLED )
+	    eTransaction =  T_DISABLED;
+	if (txn == T_ENABLED )
+	    eTransaction =  T_ENABLED;
+    }
+
+    /* else use default value */
+    if (eTransaction == T_DEFAULT_OFF )
+	eTransaction =  T_DISABLED;
+    if (eTransaction == T_DEFAULT_ON )
+	eTransaction =  T_ENABLED;
 
     if (eTransaction == T_DISABLED)
 	dsm = &dsm_traditional;
