@@ -15,6 +15,12 @@ and     MAJOR CHANGES IN BOGOFILTER (version)
 
 -------------------------------------------------------------------------------
 
+	2005-04-29
+
+	* Fix transaction enabling/disabling so that command line
+	  options, i.e. --db-transactions=yes/no, are primary and
+	  probing is secondary.
+
 0.94.6	2005-04-26
 
 	2005-04-24
